# router/acl_router.go
@@ -6,8 +6,12 @@ import (
 )
 
 func RegisterAclRoutes(r *gin.Engine, app *wire.App) {
-	acl_router := r.Group("/acl")
+	aclRouter := r.Group("/acl")
 	{
-		print(acl_router)
+		aclRouter.GET("/check", app.CasbinCtrl.CheckPermission)
+		aclRouter.GET("/permission/list", app.CasbinCtrl.ListAllCasbinData)
+		aclRouter.POST("/grouping/add", app.CasbinCtrl.AddGroupingPolicy)
+		aclRouter.POST("/policy/create", app.CasbinCtrl.CreatePolicy)
+		aclRouter.DELETE("/policy/remove", app.CasbinCtrl.RemovePolicy)
 	}
 }
