# router/user_router.go
@@ -9,7 +9,7 @@ func RegisterUserRoutes(r *gin.Engine, app *wire.App) {
 	userRouter := r.Group("/user")
 	{
 		userRouter.POST("/create", app.UserCtrl.Create)
-		userRouter.GET("/")
+		userRouter.GET("/all", app.UserCtrl.GetAll)
 		userRouter.GET("/me", app.UserCtrl.Me)
 		userRouter.GET("/uid/:uid", app.UserCtrl.FindByUID)
 		userRouter.GET("/username/:username", app.UserCtrl.FindByUsername)
